--- a/views/index.html
+++ b/views/index.html
@@ -13,11 +13,11 @@
 <body>
     <div class="container">
         <h1>Manage Node.js projects and npm packages using package.json</h1>
-        <h3>Part 1 of Free Code Camp Backend Challenges</h3>
+        <h3>Free Code Camp Backend Challenges</h3>
     </div>
 
-    <h1>Hello, HTML.</h1>
-    <p>Do not use until Challenge #12</p>
+    <h1>Test me.</h1>
+    <p>Insert your name below:</p>
     <form action="/name" method="post">
         <label>First Name :</label>
         <input type="text" name="first" value="John"><br>
